# client

./: .gitignore  CMakeLists.txt  readme.md
include/: data_processor.h  input_listener.h  pch.h  shared_buffer.h  sync_ostream.h
src/: data_processor.cpp  input_listener.cpp  main.cpp  shared_buffer.cpp  sync_ostream.cpp
tests/: main.cpp
